# taller-tp-grupal

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  _config.yml  configuracion.yaml  cppCheck.sh  cpplint.py  dependencies.sh  execute.sh  index.md  install.sh  uninstall.sh
client_src/: BackgroundMusic.cpp  BackgroundMusic.h  CMakeLists.txt  Character.cpp  Character.h  CharacterValues.h  ClMap.cpp  ClMap.h  ClThReceiver.cpp  ClThReceiver.h  Cl_Direccion.cpp  Cl_Direccion.h  Cl_Direction.cpp  Cl_Direction.h  Cl_Mapa.cpp  Cl_Mapa.h  Cl_Posicionable.cpp  Cl_Posicionable.h  ClientGameModel.cpp  ClientGameModel.h  ClientHolder.cpp  ClientHolder.h  ClientMap.cpp  ClientMap.h  Direccion.cpp  Direccion.h  Door.cpp  Door.h  Drawer.h  Enemy.cpp  Enemy.h  EnemyType.cpp  EnemyType.h  Enemy_type.cpp  Enemy_type.h  GameModelClient.cpp  GameModelClient.h  GunType.cpp  GunType.h  Gun_type.cpp  (+68 more)
client_src/src/: coordinates.cpp  coordinates.h  mainray_casting.cpp  mainshow_animation.cpp  mainshow_image.cpp  player.cpp  ray.cpp  ray.h  ray_casting.h
client_src/textures/: back_guard.mat  back_left_guard.mat  back_right_guard.mat  barrel.mat  bluestone_b.txt  bluestone_g.txt  colorstone.mat  eagle.mat  front_guard.mat  front_left_guard.mat  front_right_guard.mat  greenlight.mat  greystone_b.txt  mossy.mat  pillar.mat  purplestone.mat  right_side_guard.mat  side_guard.mat  simple_gun.mat  wood.mat
common_src/: Arma.cpp  Arma.h  Barrel.h  BlockingQueue.h  CMakeLists.txt  ConfigVariable.h  Direccion.cpp  Direccion.h  Direction.cpp  Direction.h  Enemy.cpp  Enemy.h  Enemy_type.cpp  Enemy_type.h  EnvVariablesGetter.cpp  EnvVariablesGetter.h  GameModel.cpp  GameModel.h  Guard.cpp  Guard.h  Gun_type.cpp  Gun_type.h  Item.cpp  Item.h  Jugador.cpp  Jugador.h  MapLoader.cpp  MapLoader.h  Mapa.cpp  Mapa.h  Movable.cpp  Movable.h  Objeto.cpp  Objeto.h  Player.cpp  Player.h  Posicionable.cpp  Posicionable.h  Protocol.cpp  Protocol.h  (+24 more)
data/: configuracion.yaml
data/maps/: 2_all_elements.yaml  2_all_walls.yaml  2_doors_map.yaml  2_map_players.yaml  2_mapa_bueno.yaml  2_walls_door_and_sprites.yaml  2_walls_double_door_and_sprites.yaml  3_all_elements.yaml  4_castle.yaml  4_castle_with_key_doors.yaml  4_map_with_players.yaml  4_walls_and_door.yaml  MapaTest.yaml  all_elements.yaml  all_walls.yaml  example_map.yaml  map_players_2.yaml  map_with_players.yaml  mapa_bueno.yaml  prueba.yaml  ultimate_map.yaml  walls_and_door.yaml  walls_door_and_sprites.yaml  walls_double_door_and_sprites.yaml
editor_src/: CMakeLists.txt  EditableMap.cpp  EditableMap.h  Editor.cpp  Editor.h  MapWidget.cpp  MapWidget.h  MapaEditable.cpp  MapaEditable.h  MapaTest.yaml  ResourcesWidget.cpp  ResourcesWidget.h  asd.yaml  dragwidget.cpp  dragwidget.h  example_map.yaml  imagelabel.h  main.cpp  map_exceptions.h  suppressionfile.supp
editor_src/mapas/: MapaTest.yaml  example_map.yaml  prueba.yaml
proxy/: CMakeLists.txt  ThGameServer.cpp  ThGameServer.h  main.cpp  proxy.cpp  proxy.h
proxy/textures/: bluestone.mat  greystone.mat
server_src/: Angulo.cpp  Angulo.h  Arma.cpp  Arma.h  AtomicCoordinates.h  Bot.cpp  Bot.h  CMakeLists.txt  Direccion.cpp  Direccion.h  Event.cpp  Event.h  ExceptionServer.h  GamesAdmin.cpp  GamesAdmin.h  Item.cpp  Item.h  Jugador.cpp  Jugador.h  Mapa.cpp  Mapa.h  Object.cpp  Object.h  Objeto.cpp  Objeto.h  ParamReaderServer.cpp  ParamReaderServer.h  Partida.cpp  Partida.h  Player.cpp  Player.h  Posicion.cpp  Posicion.h  Posicionable.cpp  Posicionable.h  ProtectedVector.h  ServerHolder.cpp  ServerHolder.h  ServerMap.cpp  ServerMap.h  (+26 more)
suppressions/: client.supp  client_valgrind.sh  editor_valgrind.sh
tests/: AtaquesTest.cpp  CMakeLists.txt  CreacionJugadores.cpp  ItemsTests.cpp  LuaTests.cpp  MovimientoJugadoresTests.cpp  ParamReaderServerTests.cpp  ServerPrueba.cpp  main.cpp
textures/: redbrick.mat
